tests/ifcc-test-output/testfiles-comparatives-inferior-inf_const_error_undeclared/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:12: error: ‘a’ undeclared (first use in this function)
    2 |     return a<=3;
      |            ^
input.c:2:12: note: each undeclared identifier is reported only once for each function it appears in

return code: 1
